Added simulations, including some parallel stuff to run.
Also, embarassingly, I had forgotten to add the task file to the
git, even though it's been around for a while.

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -1,4 +1,12 @@
 
+@misc{_Amazon_,
+  title = {{Amazon.de: G\"unstige Preise f\"ur Elektronik \& Foto, Filme, Musik, B\"ucher, Games, Spielzeug \& mehr}},
+  shorttitle = {{Amazon.de}},
+  abstract = {Entdecken, shoppen und einkaufen bei Amazon.de: G\"unstige Preise f\"ur Elektronik \& Foto, Filme, Musik, B\"ucher, Games, Spielzeug, Sportartikel, Drogerie \& mehr bei Amazon.de},
+  howpublished = {https://www.amazon.de/},
+  language = {de-de}
+}
+
 @misc{_APA_,
   title = {{{APA PsycNet}}},
   howpublished = {https://doi.apa.org/doiLanding?doi=10.1037\%2Fa0017808}
@@ -1276,12 +1284,12 @@
   year = {2010},
   month = dec,
   abstract = {We present a tutorial on Bayesian optimization, a method of finding the maximum of expensive cost functions. Bayesian optimization employs the Bayesian technique of setting a prior over the objective function and combining it with evidence to get a posterior function. This permits a utility-based selection of the next observation to make on the objective function, which must take into account both exploration (sampling from areas of high uncertainty) and exploitation (sampling areas likely to offer improvement over the current best observation). We also present two detailed extensions of Bayesian optimization, with experiments---active user modelling with preferences, and hierarchical reinforcement learning---and a discussion of the pros and cons of Bayesian optimization based on our experiences.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1012.2599},
   eprinttype = {arxiv},
   journal = {arXiv:1012.2599 [cs]},
   keywords = {Computer Science - Machine Learning,G.1.6,G.3,I.2.6},
-  primaryClass = {cs}
+  primaryclass = {cs}
 }
 
 @article{Bromberg-Martin_Dopamine_2010,
@@ -1495,12 +1503,12 @@
   year = {2017},
   month = feb,
   abstract = {Fluent and safe interactions of humans and robots require both partners to anticipate the others' actions. A common approach to human intention inference is to model specific trajectories towards known goals with supervised classifiers. However, these approaches do not take possible future movements into account nor do they make use of kinematic cues, such as legible and predictable motion. The bottleneck of these methods is the lack of an accurate model of general human motion. In this work, we present a conditional variational autoencoder that is trained to predict a window of future human motion given a window of past frames. Using skeletal data obtained from RGB depth images, we show how this unsupervised approach can be used for online motion prediction for up to 1660 ms. Additionally, we demonstrate online target prediction within the first 300-500 ms after motion onset without the use of target specific training data. The advantage of our probabilistic approach is the possibility to draw samples of possible future motions. Finally, we investigate how movements and kinematic cues are represented on the learned low dimensional manifold.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1702.08212},
   eprinttype = {arxiv},
   journal = {arXiv:1702.08212 [cs]},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Human-Computer Interaction,Computer Science - Robotics},
-  primaryClass = {cs}
+  primaryclass = {cs}
 }
 
 @article{Byom_Theory_2013,
@@ -8376,12 +8384,12 @@
   year = {2017},
   month = nov,
   abstract = {We present MILABOT: a deep reinforcement learning chatbot developed by the Montreal Institute for Learning Algorithms (MILA) for the Amazon Alexa Prize competition. MILABOT is capable of conversing with humans on popular small talk topics through both speech and text. The system consists of an ensemble of natural language generation and retrieval models, including template-based models, bag-of-words models, sequence-to-sequence neural network and latent variable neural network models. By applying reinforcement learning to crowdsourced data and real-world user interactions, the system has been trained to select an appropriate response from the models in its ensemble. The system has been evaluated through A/B testing with real-world users, where it performed significantly better than many competing systems. Due to its machine learning architecture, the system is likely to improve with additional data.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1709.02349},
   eprinttype = {arxiv},
   journal = {arXiv:1709.02349 [cs, stat]},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,I.2.7,I.5.1,Statistics - Machine Learning},
-  primaryClass = {cs, stat}
+  primaryclass = {cs, stat}
 }
 
 @article{Sezener_Optimizing_2019,
@@ -9226,12 +9234,12 @@
   year = {2020},
   month = jul,
   abstract = {The field of reinforcement learning can be split into model-based and model-free methods. Here, we unify these approaches by casting model-free policy optimisation as amortised variational inference, and model-based planning as iterative variational inference, within a `control as hybrid inference' (CHI) framework. We present an implementation of CHI which naturally mediates the balance between iterative and amortised inference. Using a didactic experiment, we demonstrate that the proposed algorithm operates in a model-based manner at the onset of learning, before converging to a model-free algorithm once sufficient data have been collected. We verify the scalability of our algorithm on a continuous control benchmark, demonstrating that it outperforms strong model-free and model-based baselines. CHI thus provides a principled framework for harnessing the sample efficiency of model-based planning while retaining the asymptotic performance of model-free policy optimisation.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {2007.05838},
   eprinttype = {arxiv},
   journal = {arXiv:2007.05838 [cs, stat]},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryClass = {cs, stat}
+  primaryclass = {cs, stat}
 }
 
 @article{Turner_Olfactory_2008,
