--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -799,7 +799,22 @@ NormalGamma, and the parameters are updated after one time step via:
 
 \section{Simulation results}
 \subsection{Effects of observation noise on inference}
-Observation noise refers to the noise on the position of the hand. The generating process is a Gaussian with $\sigma = 0.1$, which is determined in ./code/adaptation/pars.py. However, the agent has a belief on this value, which is fixed for the agent. This value (obs_sd, which can be passed on instanciation) can be used in lieu of an explicit $\Delta t$ parameter which controls the size of the time step
+Observation noise refers to the noise on the position of the hand. The generating process is a Gaussian with $\sigma = 0.1$, which is determined in ./code/adaptation/pars.py. However, the agent has a belief on this value, which is fixed for the agent. This value (obs\_sd, which can be passed on instanciation) can be used in lieu of an explicit $\Delta t$ parameter which controls the size of the time step
+
+\subsection{Parameter values to look into}
+By visual inspection of the results of simulations, these are the parameter values that seem promising:
+
+\begin{tabularx}{\textwidth}{
+  >{\hsize=.2\hsize\linewidth=\hsize}X|
+  >{\hsize=.1\hsize\linewidth=\hsize}X|
+  >{\hsize=.1\hsize\linewidth=\hsize}X|
+  l}
+% {l|{\hsize=.4\hsize}X|{\hsize=0.3\hsize}X|{\hsize=0.3\hsize}X}
+Agent & Obs noise & Cue noise & Notes \\ \hline \hline
+LR    & 1.2       & 0.04      & Slow fake-context inference. Maybe the priors coming from the previous stage are messing things up. \\ \hline
+1 & 1 & 1 & 1
+\end{tabularx}
+
 
 \section{Conclusions}
 
