--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -12,6 +12,10 @@
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
 
+% Model and task parameter macros
+\input{parameters}
+
+
 % Defining parameters
 \def \parts {60 }                  % Number of participants
 \def \fref #1{Figure \ref{#1}}     % Reference figures
@@ -795,11 +799,47 @@ NormalGamma, and the parameters are updated after one time step via:
                   1}\frac{\left(x - \mu_f^{(t-1)}\right)^2}{2}
 \end{align}
 
+\section{Parametrization of the task and the model}
+Some of the parameters of the model can be fixed by the physics and scales of
+the simulated experiment.
 
+Henceforth, distances are measured in meters and time in seconds. As a
+consequence, forces should be measured in Newtons, but bare in mind that what
+the model calls ``force'' is no such thing. Instead, ``forces'' in the model
+are the distance (in meters) that the real force (in Newtons) would make the
+arm move in some $\Delta t$, assuming a mass of 1Kg and zero initial
+velocity. This simplification of the terms might come back to bite us in the
+ass and might be replaced later. But first, let us speak of real forces.
+
+The force exerted by the mechanical arm depends on the context. In the baseline
+context, the force is 0N. Taking inspiration from \todo{Citation needed}, we
+take the forces of the other two contexts to be \force and -\force,
+respectively. We will assume that $\Delta t = \dt$ \todo{Need to find a good
+  way of fixing this}, which represents reaction, processing and decision
+times.
+
+Back to the lazy encoding of forces in the model, one can calculate the effects
+of these forces on the arm. With a force of 10N and a $\Delta t$ of 50ms, the
+total distance the arm will be moved by the force (again, assuming mass of 1Kg)
+is given by:
+\begin{align}
+  d_\plusminus &= \plusminus \frac{1}{2}(\force / 1Kg)((\dt)^2)\\
+               &= \plusminus 0.0125m
+\end{align}
+The agent will try to estimate $d_\plusminus$ during the experiment.
+
+We will assume \todo{This is arbitrary. Might want to justify it later.} that
+the participant observes the position of her own hand (visual + proprioceptive)
+with Gaussian observation noise with $\mu = 0m$ and $\sigma = 0.005m$.
 
 \section{Simulation results}
 \subsection{Effects of observation noise on inference}
-Observation noise refers to the noise on the position of the hand. The generating process is a Gaussian with $\sigma = 0.1$, which is determined in ./code/adaptation/pars.py. However, the agent has a belief on this value, which is fixed for the agent. This value (obs\_sd, which can be passed on instanciation) can be used in lieu of an explicit $\Delta t$ parameter which controls the size of the time step
+Observation noise refers to the noise on the position of the hand. The
+generating process is a Gaussian with $\sigma = 0.1$, which is determined in
+./code/adaptation/pars.py. However, the agent has a belief on this value, which
+is fixed for the agent. This value (obs\_sd, which can be passed on
+instanciation) can be used in lieu of an explicit $\Delta t$ parameter which
+controls the size of the time step
 
 \subsection{Parameter values to look into}
 By visual inspection of the results of simulations, these are the parameter values that seem promising:
