End of day. Adaptation visualization complete.

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -6464,6 +6464,26 @@
   number = {2}
 }
 
+@article{Medina_Mechanism_2001,
+  title = {A {{Mechanism}} for {{Savings}} in the {{Cerebellum}}},
+  author = {Medina, Javier F. and Garcia, Keith S. and Mauk, Michael D.},
+  year = {2001},
+  month = jun,
+  volume = {21},
+  pages = {4081--4089},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.21-11-04081.2001},
+  abstract = {The phenomenon of savings (the ability to relearn faster than the first time) is a familiar property of many learning systems. The utility of savings makes its underlying mechanisms of special interest. We used a combination of computer simulations and reversible lesions to investigate mechanisms of savings that operate in the cerebellum during eyelid conditioning, a well characterized form of motor learning. The results suggest that a site of plasticity outside the cerebellar cortex (possibly in the cerebellar nucleus) can be protected from the full consequences of extinction and that the residual plasticity that remains can later contribute to the savings seen during relearning.},
+  chapter = {ARTICLE},
+  copyright = {Copyright \textcopyright{} 2001 Society for Neuroscience},
+  journal = {Journal of Neuroscience},
+  keywords = {animals,experimental,extinction,eyelid conditioning,learning,LTD,LTP,memory,plasticity,simulation},
+  language = {en},
+  number = {11},
+  pmid = {11356896}
+}
+
 @article{Meister_dimensionality_2015,
   title = {On the Dimensionality of Odor Space},
   author = {Meister, Markus},
